# BF-Compiler

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: analyzer.hpp  ast.hpp  codegen.hpp  lexer.hpp  metadata.hpp  optimizer.hpp  parser.hpp  token.hpp
src/: codegen.cpp  lexer.cpp  main.cpp  parser.cpp
test/: out_of_bounds_access.bf
tests/: test_lexer.cpp  test_parser.cpp
